add setting and config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,15 @@
     "className",
     "ngClass",
     "cx",
+    "theme",
     "class:list",
     ".*Styles*"
   ],
+  "tailwindCSS.includeLanguages": {
+    "html": "html",
+    "javascript": "javascript",
+    "css": "css"
+},
   "[markdown]": {},
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit"
